#7 refactored pages and added examples
