# src/mobile-app/app/CoinGardenWorldMobileApp.DotNetApi/Controllers/PostsController.cs
@@ -39,19 +39,6 @@ namespace CoinGardenWorldMobileApp.DotNetApi.Controllers
             return _unitOfWork.PostRepository.List().Select(PostMapper.ProjectToDto);
         }
 
-        // TODO: Filter public posts from most viewed accounts
-        // GET: api/Posts
-        [HttpGet]
-        [AllowAnonymous]
-        [Route("[action]")]
-        [EnableQuery]
-        [Produces("application/json")]
-        [ProducesResponseType(typeof(IEnumerable<PostDto>), StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        public IQueryable<PostDto> GetPublicPosts()
-        {
-            return _unitOfWork.PostRepository.List().Select(PostMapper.ProjectToDto);
-        }
 
         // GET: api/Posts/5
         [HttpGet("{id}")]
